public_html/includes/templates/default.catalog/less/app/product.less
#view-full-page {
  float: right;
  display: inline-block;
  padding: @default-gutter-size/2 @default-gutter-size;
}

#box-product {
  .main-image {
    .sticker {
      color: #fff;
      font-size: 12px;
      font-weight: bold;
      top: 15px;
      left: -30px;
      padding: @default-gutter-size/4 @default-gutter-size/2;
      position: absolute;
      text-align: center;
      text-transform: uppercase;
      transform: rotate(-45deg);
      width: 125px;
      &.new {
        background: rgba(251, 184, 41, 0.85);
      }
      &.sale {
        background: rgba(237, 60, 50, 0.85);
      }
    }
  }
  .price-wrapper {
    font-size: 1.75em;
  }
  .regular-price {
    font-size: 0.75em;
  }
  .campaign-price {
    color: #cc0000;
  }
  .tax {
    color: #999999;
  }
  .stock-available {
    .value {
      color: #009900;
    }
  }
  .stock-partly-available {
    .value {
      color: #ff9900;
    }
  }
  .stock-unavailable {
    .value {
      color: #cc0000;
    }
  }
  .social-bookmarks {
    font-size: 1.75em;
    margin: @default-gutter-size 0;
  }
  .attributes {
    table {
      -webkit-column-break-inside: avoid;
      -moz-column-break-inside: avoid;
      break-inside: avoid-column;
      td:first-child {
        width: 50%;
      }
    }
    @media(min-width: @media-breakpoint-sm) {
      columns: auto 2;
    }
  }
}

